--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 ndarray = {version = "*", features = ["blas"]}
+ndarray-linalg = {version = "*", git="https://github.com/matthagan15/ndarray-linalg.git", branch="stable_expm"}
 # blas-src = {version = "*", features = ["intel-mkl"]}
 blas-src = {version = "*", features = ["accelerate"]}
 rand = "*"
